[package]
name = "tauri-plugin-oauth"
version = "0.0.1"
authors = ["Naitk Singhal", "FabianLars <fabianlars@fabianlars.de>"]
description = "A Tauri plugin for spawning a localhost server. Needed for some oauth flows (Login with X)."
edition = "2021"
rust-version = "1.79"
license = "MIT OR Apache-2.0"
include = ["src/**", "Cargo.toml", "LICENSE_*"]
readme = "README.md"
repository = "https://github.com/Naitik4516/tauri-plugin-oauth"

[dependencies]
httparse = "1"
log = "0.4"
serde = "1"
tauri = "2"
url = "2"
